--- a/seyche tansy.css
+++ b/seyche tansy.css
@@ -511,3 +511,4 @@ footer nav a {margin: 0 1em;}
 
     #tabs li a, #tabs li a.inactive {border-bottom: none;}
 }
+/**theme coded by seyche on tumblr**/
