--- a/chat-balloons.css
+++ b/chat-balloons.css
@@ -10,15 +10,12 @@
 }
 
 .chat .rtail {
-  float: left;
   color: #212121;
-  margin: 0em 0em 0.5em 0.5em;
-  border-radius: .5em;
-  padding: 0.5em 1em;
-  background: #ddd;
-  max-width: 60%;
-  clear: both;
-  position: relative;
+  border: 2px solid #dedede;
+  background-color: #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
 }
 
 .chat .rtime {
