--- a/chat-balloons.css
+++ b/chat-balloons.css
@@ -17,17 +17,19 @@
   padding: 10px;
   margin: 10px 0;
 }
+.chat img {
+  float: left;
+  max-width: 60px;
+  width: 100%;
+  margin-right: 20px;
+  border-radius: 50%;
+}
 
-.chat .rtime {
+.rtime {
   color: #aaaaac;
   font-size: 60%;
-  font-weight: lighter;
-  font-stretch: ultra-condensed;
   float: left;
-  position: relative;
-  clear: both;
-  margin: -.25em 0em 0.5em 0em;
-  padding: 0 1em 0.5em;
+
 }
 
 .chat .stail {
