--- a/chat-balloons.css
+++ b/chat-balloons.css
@@ -13,8 +13,8 @@
   float: left;
   color: #212121;
   margin: 0em 0em 0.5em 0.5em;
-  border-radius: .5em;
-  border-end-end-radius: 0.3em;
+  border-radius: 14px;
+  border-end-start-radius: 0em;
   padding: 0.5em 1em;
   background: #ddd;
   max-width: 60%;
@@ -38,7 +38,8 @@
   float: right;
   color: #212121;
   margin: 0em 0.5em 0.5em 0em;
-  border-radius: .5em;
+  border-radius: 14px;
+  border-end-end-radius: 0em;
   padding: 0.5em 1em;
   background: #F5CCD4;
   max-width: 60%;
