--- a/chat-balloons.css
+++ b/chat-balloons.css
@@ -16,7 +16,7 @@
   border-radius: 14px;
   border-end-start-radius: 0em;
   border: 2px solid #CBCBCB;
-  padding: 0.5em 1em;
+  padding: 0.6em 1em;
   background: #ddd;
   max-width: 60%;
   clear: both;
@@ -42,7 +42,7 @@
   border-radius: 14px;
   border-end-end-radius: 0em;
   border: 2px solid #DAB5BD;
-  padding: 0.5em 1em;
+  padding: .6em 1em;
   background: #F5CCD4;
   max-width: 60%;
   clear: both;
