--- a/fanfiction-epub.css
+++ b/fanfiction-epub.css
@@ -1,7 +1,7 @@
 body {
   font-family: Trebuchet MS, Tahoma, Helvetica, sans-serif;
   font-size: 12px;
-  padding: 0.5em;
+  margin: 0.5em;
 }
 
 blockquote {
