--- a/fanfiction-epub.css
+++ b/fanfiction-epub.css
@@ -5,8 +5,8 @@ body {
 }
 
 blockquote {
-  border: 2px solid #dedede;
-  background-color: #ddd;
+  border: 2px solid #DADADA;
+  background-color: #EEEEEE;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
