--- a/fanfiction-epub.css
+++ b/fanfiction-epub.css
@@ -8,7 +8,7 @@ blockquote {
   border: 2px solid #DADADA;
   background-color: #EEEEEE;
   border-radius: 5px;
-  padding: 10px;
+  padding: 1em;
   margin: 10px 0;
 }
 
